<resources>
	<string name="app_name">OwnStream</string>
	<string name="login_instance_url">Instance URL</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_submit">Log in</string>
	<string name="login_error_null_response">Invalid response received.</string>
	<string name="login_success">Logged in as %s.</string>
	<string name="nav_home">Home</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="shelf_continue">Continue Watching</string>
	<string name="shelf_nextup">Up Next</string>
	<string name="shelf_recents">Recently Added</string>
	<string name="shelf_movies">Movies</string>
	<string name="shelf_series">TV Shows</string>
	<string name="shelf_more">More</string>
	<string name="home_error">Failed to load home shelves</string>
	<string name="auth_error">Failed to check authorization</string>
	<string name="accessibility_image_poster">Poster for a movie/show</string>
	<string name="action_watch">Watch</string>
	<string name="error_unexpected_type">Unexpected type \'%s\'</string>
	<string name="nav_movie">Movie</string>
	<string name="error_video_not_found">Video not found</string>
	<string name="action_watch_episode">Watch S%02dE%02d</string>
	<string name="action_continue">Continue watching</string>
	<string name="action_continue_episode">Continue S%02dE%02d</string>
	<string name="nav_show">Show</string>
	<string name="show_details">Details</string>
	<string name="show_episodes">Episodes</string>
	<string name="error_season_load_failed">Failed to load seasons</string>
	<string name="template_episode_title">E%02d: %s</string>
	<string name="template_season_title">Season %d</string>
	<string name="progress_loading">Loading progress…</string>
	<string name="player_skip_intro">Skip Intro</string>
	<string name="player_skip_outro">Skip Ending</string>
	<string name="player_skip_intermission">Skip Intermission</string>
	<string name="video">Video</string>
	<string name="player_episode_template">S%d E%d: %s</string>
	<string name="player_quality">Quality</string>
	<string name="bullet">•</string>
	<string name="player_quality_auto">Auto</string>
	<string name="player_captions">Subtitles</string>
	<string name="player_track">Audio Track</string>
	<string name="unavailable">Unavailable</string>
	<string name="none">None</string>
	<string name="subtitle_selector_unlabeled">Subtitle #%d</string>
	<string name="subtitle_selector_template">%s • %s</string>
	<string name="nav_library">Library</string>
	<string name="content_type_movies">Movies</string>
	<string name="content_type_tv">TV Shows</string>
	<string name="generic_error">Something went wrong</string>
	<string name="nav_serverManagement">Manage Server</string>
	<string name="server_management_transcoding">Transcoding</string>
	<string name="server_management_benchmark">Benchmark</string>
	<string name="server_management_people">Users</string>
	<string name="server_management_transcode">Transcode Libraries</string>
	<string name="server_management_input">Input Libraries</string>
	<string name="server_management_webhooks">Webhooks</string>
	<string name="server_management_jobs">Jobs</string>
	<string name="server_management_orphaned">Orphaned Videos</string>
	<string name="job_state_pending_template">Created %s ago</string>
	<string name="job_state_starting_template">About to start…</string>
	<string name="job_state_processing_template">Running for %s</string>
	<string name="job_state_completed_template">Finished %s ago (ran for %s)</string>
	<string name="job_state_failed_template">Failed %s ago (ran for %s)</string>
</resources>