<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_graph.xml"
	app:startDestination="@id/nav_home">

	<fragment
		android:id="@+id/nav_home"
		android:name="dev.kuylar.ownstream.ui.fragment.HomeFragment"
		android:label="@string/nav_home"
		tools:layout="@layout/fragment_home" />
	<fragment
		android:id="@+id/nav_movie"
		android:name="dev.kuylar.ownstream.ui.fragment.MovieFragment"
		android:label="@string/nav_movie"
		tools:layout="@layout/fragment_movie" />
	<fragment
		android:id="@+id/nav_show"
		android:name="dev.kuylar.ownstream.ui.fragment.ShowFragment"
		android:label="@string/nav_show"
		tools:layout="@layout/fragment_show" />
</navigation>