<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	android:orientation="vertical"
	tools:context=".ui.activity.LoginActivity">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/instance"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:hint="@string/login_instance_url">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:hint="@string/login_username">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="username"
			android:importantForAutofill="yes"
			android:inputType="text" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:hint="@string/login_password">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="password"
			android:importantForAutofill="yes"
			android:inputType="textPassword" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:text="@string/login_submit" />
</LinearLayout>